syntax = "proto3";

package ticket;

service SupportTicket {
    rpc create(CreateRequest) returns(CreateResponse); //create ticket - unary RPC
    rpc update(UpdateRequest) returns(UpdateResponse); //updates ticket - unary RPC
    rpc delete(DeleteRequest) returns(DeleteResponse); //deletes ticket - unary RPC
    rpc get(TicketRequest) returns(stream TicketList); //allows staff to request a list of open tickets for the user - server streaming RCP
}

//sends information to create new ticket
message CreateRequest {
    string cust_id = 1; //unique ID for customer
    string staff_id = 2; //unique ID for staff
    string content = 3; //contents of ticket
}

//confirms ticket creation and returns generated unique ticket ID number
message CreateResponse {
    int32 ticket_id = 1; //unique ticket ID created and returned
}

//sends updated information to ticket
message UpdateRequest {
    int32 ticket_id = 1; 
    string ticket_update = 2; //string updates to be added to ticket
}

//confirms ticket update
message UpdateResponse {
    string update_confirmation = 1; //confirmation that ticket was updated
}

//request to delete ticket
message DeleteRequest {
    int32 ticket_id = 1; 
    string staff_id = 2; //staff ID required for accountability
}

//confirms ticket deletion
message DeleteResponse {
    string delete_confirmation = 1; //confirmation of the ticket deletion
}

//staff requesting ticket list
message TicketRequest {
    string cust_id = 1; 
}

//returning ticket list
message TicketList {
    repeated string tickets = 1; //list of all tickets connected to this customer
}